src/test/ui/type-alias-impl-trait/issue-53096.min_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-53096.rs:13:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

